# t1d-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GUIDELINE.md  README.md  TODO.md  fly.lite.toml  fly.toml  pyproject.toml
.agent/rules/: general.md
.claude/skills/dev-scan/: SKILL.md
src/: cache.py  dexcom_client.py  main.py  server.py  sse.py
src/cgm/: dexcom_official.py  nightscout.py
src/community/: search.py
src/nutrition/: database.py
src/tools/: dexcom_tools.py
src/treatment/: calculator.py  visualizer.py
src/treatment/sick_day/: knowledge_base.py  risk_analyzer.py
src/utils/: calculator.py
tests/: test_bolus.py  test_cache.py  test_cgm.py  test_community.py  test_nightscout.py  test_nutrition.py  test_tools.py
