[project]
name = "t1d-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.25.0",
    "pydexcom>=0.5.0",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
